/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    `java-library`
    `maven-publish`
}

repositories {
    mavenLocal()
    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }
}

dependencies {
    api(libs.org.testng.testng)
    api(libs.org.seleniumhq.selenium.selenium.java)
    api(libs.io.github.bonigarcia.webdrivermanager)
    api(libs.com.google.guava.guava)
}

group = "io.github.densudas"
version = "1.0-SNAPSHOT"
description = "automation-testing-framework"
java.sourceCompatibility = JavaVersion.VERSION_21

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}

tasks.named<Test>("test") {
    useTestNG()
}
